--- a/app/src/main/res/layout/fragment_other_user_profile.xml
+++ b/app/src/main/res/layout/fragment_other_user_profile.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/logout_tv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F6C79D"
@@ -47,17 +46,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/usernameTextView" />
 
-    <Button
-        android:id="@+id/editButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="#F16953"
-        android:text="Edit Profile"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/locationTextView" />
-
     <TextView
         android:id="@+id/number_tv"
         android:layout_width="wrap_content"
@@ -71,24 +59,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerList"
-        android:layout_width="413dp"
-        android:layout_height="429dp"
+        android:layout_width="match_parent"
+        android:layout_height="549dp"
         android:layout_marginTop="66dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editButton" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="21dp"
-        android:text="Logout"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/avatarImageView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/locationTextView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
