--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -36,7 +36,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
             <ImageButton
-                android:id="@+id/galleryBtn"
+                android:id="@+id/gallery"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
@@ -47,7 +47,7 @@
 
 
             <ImageButton
-                android:id="@+id/cameraBtn"
+                android:id="@+id/camera_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="30dp"
@@ -64,7 +64,7 @@
                 android:hint="Username"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/galleryBtn" />
+                app:layout_constraintTop_toBottomOf="@+id/gallery" />
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email_et"
