--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,6 +19,7 @@
         android:contentDescription="User Avatar"
         android:scaleType="centerCrop"
         android:src="@drawable/avatar"
+        android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -81,7 +82,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editButton" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/logOutTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
