--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -45,6 +45,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="25dp"
         android:hint="Password"
+        android:inputType="textPassword"
         android:textColorHint="#8A8A8A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
